# django-online-shop

./: .env.template  pyproject.toml
store/cart/: admin.py  models.py  views.py
store/cart/migrations/: 0001_initial.py  0004_rename_cartproduct_cartproducts_rename_cart_carts.py  0005_alter_carts_user.py
store/cart/services/: add_to_cart_services.py  calculate_services.py  db_get_services.py  delete_from_cart_services.py
store/cart/templates/cart/: cart.html
store/cart/tests/: test_cart_views.py
store/shop/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
store/shop/migrations/: 0001_initial.py  0002_rename_category_categories_rename_product_products.py  0003_products_users_favorites.py
store/shop/services/: db_services.py
store/shop/templates/shop/: base.html  favorites.html  index.html
store/shop/tests/: test_registration_authentication.py  test_shop_views.py  test_views.py
store/store/: settings.py  urls.py
